# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cell-analysis-tools"
version = "0.0.11"
description = "cell analysis tools"
readme = "README.md"
authors = [{ name = "Emmanuel Contreras", email = "econtreras@wisc.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cell", "analysis", "tools"]
dependencies = [
    "read-roi",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/skalalab/cell-analysis-tools"

[project.scripts]
cell_analysis_tools = "cell_analysis_tools.__main__:main"

[tool.bumpver]
current_version = "0.0.11"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/__init__.py" = ["{version}"]